правки по горизонтальному скроллу.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       </nav>
     </header>
     <main class="main">
+      
       <section class="content">
         <article class="card">
           <h2 class="card-title">
@@ -54,7 +55,7 @@
           </h2>
           <div class="img-container">
             <img src="./images/image.jpg" alt="галактика на фоне звезд" loading="lazy" class="card__img brightness" />
-            <span class="card__label">&lt;/HTML&gt;</span>
+            <span class="card__label first-label">&lt;/HTML&gt;</span>
           </div>
           <p class="card__text">
             Это было самое начало пути. На этом этапе важно было проникнуться
