--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </h2>
           <div class="img-container">
             <img src="./images/image.jpg" alt="галактика на фоне звезд" loading="lazy" class="card__img brightness" />
-            <span class="card__label first-label">&lt;/HTML&gt;</span>
+            <span class="card__label first-label label-up ">&lt;/HTML&gt;</span>
           </div>
           <p class="card__text">
             Это было самое начало пути. На этом этапе важно было проникнуться
@@ -114,7 +114,7 @@
           <h2 class="card-title">1 спринт: Я — чистый лист</h2>
           <div class="img-container">
             <img src="./images/image.jpg" alt="галактика на фоне звезд" loading="lazy" class="card__img contrast" />
-            <span class="card__label">&lt;/HTML&gt;</span>
+            <span class="card__label label-up">&lt;/HTML&gt;</span>
           </div>
           <p class="card__text">
             На первых этапах мы работали со страхами и сомнениями, которые часто
@@ -175,7 +175,7 @@
           <h2 class="card-title">1 спринт: А если не получится?</h2>
           <div class="img-container">
             <img src="./images/image.jpg" alt="галактика на фоне звезд" loading="lazy" class="card__img blur" />
-            <span class="card__label">&lt;/HTML&gt;</span>
+            <span class="card__label  label-up ">&lt;CSS&gt;</span>
           </div>
           <p class="card__text">
             Первый проект — позади! Но это всё ещё самое начало пути. Радость
@@ -234,7 +234,7 @@
           <h2 class="card-title">2 спринт: Погоня за идеалом</h2>
           <div class="img-container">
             <img src="./images/image.jpg" alt="галактика на фоне звезд" loading="lazy" class="card__img opacity" />
-            <span class="card__label">&lt;/HTML&gt;</span>
+            <span class="card__label">&lt;desigions&gt;</span>
           </div>
           <p class="card__text">
             На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы
@@ -295,7 +295,7 @@
           <h2 class="card-title">2 спринт: О тех, кто рядом</h2>
           <div class="img-container">
             <img src="./images/image.jpg" alt="галактика на фоне звезд" loading="lazy" class="card__img grayscale" />
-            <span class="card__label">&lt;/HTML&gt;</span>
+            <span class="card__label">care</span>
           </div>
           <p class="card__text">
             Всё это время вы были не одиноки (хотя, возможно, иногда и
@@ -357,7 +357,7 @@
           <h2 class="card-title">3 спринт: Обходные стратегии</h2>
           <div class="img-container">
             <img src="./images/image.jpg" alt="галактика на фоне звезд" loading="lazy" class="card__img saturate" />
-            <span class="card__label">&lt;/HTML&gt;</span>
+            <span class="card__label">&lt;support&gt;</span>
           </div>
           <p class="card__text">
             На этом курсе вы постоянно решали разные задачи. В какой-то момент
@@ -416,7 +416,7 @@
           <h2 class="card-title">3 спринт: Когда опускаются руки</h2>
           <div class="img-container">
             <img src="./images/image.jpg" alt="галактика на фоне звезд" loading="lazy" class="card__img hue-rotate" />
-            <span class="card__label">&lt;/HTML&gt;</span>
+            <span class="card__label">&lt;lifes-style: none;&gt;</span>
           </div>
           <p class="card__text">
             Во время учёбы часто возникает чувство, когда не знаешь, за что
@@ -477,7 +477,7 @@
           <h2 class="card-title">«Сейчас я здесь»</h2>
           <div class="img-container">
             <img src="./images/image.jpg" alt="галактика на фоне звезд" loading="lazy" class="card__img sepia-brightness" />
-            <span class="card__label">&lt;/HTML&gt;</span>
+            <span class="card__label">&lt;experience&gt;</span>
           </div>
           <p class="card__text">
             Сейчас вы уже очень много знаете о вёрстке. Но это только начало.
@@ -553,7 +553,7 @@
           <div class="modal">
             <div class="modal__title-wrapper">
               <div class="modal__inner-container">
-                <svg class="svg-floppy modal__svg-floppy" viewbox="0 0 39 39">
+                <svg class="svg-floppy modal__svg-floppy" viewbox="0 0 25 25">
                   <use href="./svg/floppy.svg#floppy"></use>
                 </svg>
                 <h2 class="modal__title">Вставьте дискету, чтобы продолжить</h2>
